Fix overflowing map

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,9 +13,10 @@ main {
 }
 
 #map {
-  height: 100%;
+  height: 90%;
   margin-right: 3vw;
 }
+
 header {
   margin-bottom: 10vh;
 }
@@ -51,6 +52,8 @@ table.table {
   min-width: 350px;
   width: 95vw;
 }
+
+
 //Styling for form to create new map
 .map-form {
   margin: 3vw 10vw 3vw 10vw;
